// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[Table Rendering] renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-table__wrapper rcx-position-relative"
    >
      <table
        class="rcx-box rcx-box--full rcx-table rcx-w-full"
      >
        <thead
          class="rcx-box rcx-box--full rcx-table__head"
        >
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Dessert (100g serving)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Calories
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Fat (g)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Carbs (g)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Protein (g)
            </th>
          </tr>
        </thead>
        <tbody
          class="rcx-box rcx-box--full rcx-table__body"
        >
          <tr
            class="rcx-box rcx-box--full rcx-table__row--action rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Ice cream sandwich
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              237
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              9
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              37
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4.3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`[Table Rendering] renders Fixed without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-table__wrapper rcx-position-relative"
    >
      <table
        class="rcx-box rcx-box--full rcx-table--fixed rcx-table rcx-w-full"
      >
        <thead
          class="rcx-box rcx-box--full rcx-table__head"
        >
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Dessert (100g serving)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Calories
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Fat (g)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Carbs (g)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Protein (g)
            </th>
          </tr>
        </thead>
        <tbody
          class="rcx-box rcx-box--full rcx-table__body"
        >
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Ice cream sandwich
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              237
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              9
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              37
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4.3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`[Table Rendering] renders Striped without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-table__wrapper rcx-position-relative"
    >
      <table
        class="rcx-box rcx-box--full rcx-table--striped rcx-table--sticky rcx-table--fixed rcx-table rcx-w-full"
      >
        <thead
          class="rcx-box rcx-box--full rcx-table__head"
        >
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Dessert (100g serving)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Calories
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Fat (g)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Carbs (g)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Protein (g)
            </th>
          </tr>
        </thead>
        <tbody
          class="rcx-box rcx-box--full rcx-table__body"
        >
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Ice cream sandwich
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              237
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              9
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              37
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4.3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`[Table Rendering] renders WithSelection without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-table__wrapper rcx-position-relative"
    >
      <table
        class="rcx-box rcx-box--full rcx-table rcx-w-full"
      >
        <thead
          class="rcx-box rcx-box--full rcx-table__head"
        >
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="select all"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Dessert (100g serving)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Calories
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Fat (g)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Carbs (g)
            </th>
            <th
              class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info"
            >
              Protein (g)
            </th>
          </tr>
        </thead>
        <tbody
          class="rcx-box rcx-box--full rcx-table__body"
        >
          <tr
            class="rcx-box rcx-box--full rcx-table__row--selected rcx-table__row"
          >
            <td
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="select frozen yoghurt"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </td>
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row--selected rcx-table__row"
          >
            <td
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="select frozen yoghurt"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </td>
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row"
          >
            <td
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="select frozen yoghurt"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </td>
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row--selected rcx-table__row"
          >
            <td
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="select frozen yoghurt"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </td>
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
          <tr
            class="rcx-box rcx-box--full rcx-table__row--selected rcx-table__row"
          >
            <td
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="select frozen yoghurt"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </td>
            <th
              class="rcx-box rcx-box--full rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
              scope="row"
            >
              Frozen yoghurt
            </th>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              159
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              6
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              24
            </td>
            <td
              class="rcx-box rcx-box--full rcx-table__cell--align-end rcx-table__cell rcx-p-8 rcx-color-font-secondary-info rcx-font-p2"
            >
              4
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="rcx-box rcx-box--full rcx-table__selection rcx-css-7awnbo"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1vmb5x3"
      >
        5 Items selected
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-1tmdf8e"
      >
        <div
          class="rcx-button-group rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-items-center rcx-button-group--align-start rcx-css-x7bl3q"
          role="group"
        >
          <button
            class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-button-group__item rcx-css-1yzvz7u"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              Delete
            </span>
          </button>
          <button
            class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-button-group__item rcx-css-1yzvz7u"
            type="button"
          >
            <span
              class="rcx-button--content"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
